// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EstimatedCostsAndCredits renders correctly with 2 projects and project usage and charges 1`] = `
<div class="current-month-area">
  <h1 class="current-month-area__costs">USD $6.00</h1> <span class="current-month-area__title">Estimated Charges for May 2020</span>
  <p class="current-month-area__info">
    If you still have Storage and Bandwidth remaining in your free tier, you won’t be charged. This information
    is to help you estimate what charges would have been had you graduated to the paid tier.
  </p>
  <div class="current-month-area__content">
    <p class="current-month-area__content__title">DETAILS</p>
    <div class="usage-charges-item-container item">
      <div class="usage-charges-item-container__summary">
        <div class="usage-charges-item-container__summary__name-container"><svg></svg> <span>projectName</span></div> <span class="usage-charges-item-container__summary__amount">
            Estimated Total USD $3.00
        </span>
      </div>
      <!---->
    </div>
    <div class="usage-charges-item-container item">
      <div class="usage-charges-item-container__summary">
        <div class="usage-charges-item-container__summary__name-container"><svg></svg> <span>projectName1</span></div> <span class="usage-charges-item-container__summary__amount">
            Estimated Total USD $3.00
        </span>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`EstimatedCostsAndCredits renders correctly with project and no project usage and charges 1`] = `
<div class="current-month-area">
  <h1 class="current-month-area__costs">USD $0.00</h1> <span class="current-month-area__title">Estimated Charges for May 2020</span>
  <p class="current-month-area__info">
    If you still have Storage and Bandwidth remaining in your free tier, you won’t be charged. This information
    is to help you estimate what charges would have been had you graduated to the paid tier.
  </p>
  <div class="current-month-area__content">
    <p class="current-month-area__content__title">DETAILS</p>
  </div>
</div>
`;

exports[`EstimatedCostsAndCredits renders correctly with project and project usage and charges 1`] = `
<div class="current-month-area">
  <h1 class="current-month-area__costs">USD $3.00</h1> <span class="current-month-area__title">Estimated Charges for May 2020</span>
  <p class="current-month-area__info">
    If you still have Storage and Bandwidth remaining in your free tier, you won’t be charged. This information
    is to help you estimate what charges would have been had you graduated to the paid tier.
  </p>
  <div class="current-month-area__content">
    <p class="current-month-area__content__title">DETAILS</p>
    <div class="usage-charges-item-container item">
      <div class="usage-charges-item-container__summary">
        <div class="usage-charges-item-container__summary__name-container"><svg></svg> <span>projectName</span></div> <span class="usage-charges-item-container__summary__amount">
            Estimated Total USD $3.00
        </span>
      </div>
      <!---->
    </div>
  </div>
</div>
`;
